I feel sad now :(

--- a/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -17,8 +17,8 @@
   "messages.toneko.notOwner": "§c你不是 %d 的主人喵~",
   "title.toneko.become": "§a你变成一只猫娘了喵~",
   "subtitle.toneko.become": "§6来体验猫猫的快乐吧",
-  "advancements.toneko.root.title": "成为一只猫猫吧",
-  "advancements.toneko.root.description": "获得猫娘药水",
+  "advancements.toneko.root.title": "§a成为一只猫猫吧",
+  "advancements.toneko.root.description": "§b获取猫娘药水",
   "misc.toneko.owner": "主人",
   "misc.toneko.nya": "喵~",
   "misc.toneko.prefix": "猫娘",
