--- a/src/main/resources/assets/toneko/lang/en_us.json
+++ b/src/main/resources/assets/toneko/lang/en_us.json
@@ -1,65 +1,25 @@
 {
-  "command.toneko.player.success": "§aSuccessfully set player§6%d§a to be a neko girl, and you become its owner",
-  "command.toneko.player.nekoed": "§bIt is already a neko girl, and its owner is§6%d",
-  "command.toneko.help": "§b/toneko help:\n§a/toneko help §bGet help\n§a/toneko player <player name> §bTurns a player into a cat girl\n§a/toneko item §bGet the cat stick\n  §a/toneko aliases <cat girl name> add or remove <alias> §bAdd or remove aliases for you (the word that will be converted to 'master')\n§a/toneko block <cat girl name> add or remove <blocking word> <replacement word> word or all §badd blocking word (blocking word will be replaced with replacement word)",
-  "command.toneko.notOwner": "§cYou are not %d's owner",
-  "command.toneko.aliases.add.true" : "§aAlias set successfully!",
-  "command.toneko.aliases.add.exists" : "§cAlias exists",
-  "command.toneko.aliases.remove.no": "§cAlias doesn't exists",
-  "command.toneko.aliases.remove.true": "§aRemove Alias successfully!",
-  "command.no-permission": "§cYou don't hava permission to execute this command",
-  "command.parameter.error": "§cThe parameters entered are incorrect",
-  "command.toneko.block.exists": "§cBlock Word was exists",
-  "command.toneko.block.no-exists": "§cBlock Word isn't exists",
-  "command.toneko.block.add.success": "§aAdd Block Word successfully",
-  "command.toneko.block.remove.success": "§aRemove Block Word successfully",
-  "command.toneko.xp": "§aYour experience of goodwill with %d is %c.",
-  "command.toneko.remove.confirm": "§cPlease run this command again to confirm.",
-  "command.toneko.remove.success": "§a Successfully deleted catgril %d",
-  "command.toneko.everyone": "§aSuccessfully set every player to be a neko girl, and Crystal_Neko become its owner",
-  "command.neko.help": "§b/neko help:\n§a/neko help §bGet help\n§a/neko jump §bGet jump boost",
-  "command.neko.not-neko": "§cYou are not a neko lady and cannot execute this command",
-  "command.aineko.help": "§b/aineko help:\n§a/aineko help §b get help\n§a/aineko add <name> §b add an AI catgirl\n§a/aineko remove <name> §b remove an AI catgirl",
-  "command.totrash.set": "§aHmm~♡Onii-chan, do you really want me to call you Zayu?♡Then let me do it for you, Zayu-chan~♡",
-  "chat.neko.nya": "-nya~",
-  "chat.neko.prefix": "§aneko",
-  "chat.neko.owner": "owner",
-  "base.null.owner": "no owner",
-  "item.stick" : "§9§oCat stick",
-  "item.stick-lore": "§9§oNo IP68",
-  "item.stick-level-2": "§9§oCat stick level 2",
-  "item.stick-level-2-lore": "§9§oIP68!No water can damage it!",
-  "item.toneko.empty": " ",
-  "item.toneko.neko_spawn_egg": "neko spawn egg",
-  "attack.add-xp":"§6Your friendship experience with %d has increased by %c",
-  "attack.death.normal_rod": "You killed by fucking",
-  "entity.neko.loli.end_rod.use.0": "§aWhat do you...want to do",
-  "entity.neko.loli.end_rod.use.1": "§aPlease...don't...do this",
-  "entity.neko.loli.end_rod.use.2": "§aYou are so perverted",
-  "entity.neko.loli.end_rod.use.3": "§aIf you keep doing this...I will",
-  "entity.neko.loli.end_rod.use.sys.3": "§cSystem prompt: Please stop your perverted behavior",
-  "entity.neko.loli.end_rod.use.4": "§aQuick...stop",
-  "entity.neko.loli.end_rod.use.5": "§aLast reminder, you...stop",
-  "entity.neko.loli.end_rod.use.kick": "§cReflect on your behavior, heitai!",
-  "client.screen.InstalledOptifine": "Found Optifine!",
-  "client.screen.InstalledOptifine.text": "Using ToNeko together with Optifine will cause crashes and other problems. If problems occur when using it at the same time as Optifine, please do not give feedback. If you need to optimize and use lights and shadows, use Sodium+Iris",
-  "client.screen.InstalledOptifine.button.sodium": "Download Sodium",
-  "client.screen.InstalledOptifine.button.iris": "Download Iris",
-
-  "msg.toneko.join": "§a♡Na na, Onii-chan♡, welcome to join the game~",
-  "msg.toneko.join.trash": "§cyoyo, ♡zayujiang♡, why are you here?",
-  "msg.toneko.leave": "§a♡Onii-chan♡, goodbye meow~",
-  "msg.toneko.leave.trash": "§cLet's go, ♡zayujiang♡",
-  "msg.toneko.hurt": "§aAre you okay, Onii-chan, are you injured?",
-  "msg.toneko.hurt.trash": "§cI can't even hide from this, what a bastard~♡",
-  "msg.toneko.high-hurt": "§aHey (°Д°), it looks like Onii-chan was seriously injured",
-  "msg.toneko.high-hurt.trash": "§cHuh? The fish paste is really average~♡",
-  "msg.toneko.low-heart": "§aHold on, Onii-chan, I believe you can do it♡",
-  "msg.toneko.low-heart.trash": "§cThe mixed fish sauce is really delicious~♡",
-  "msg.toneko.fight": "§aOnii-chan, come on, you can do it♡",
-  "msg.toneko.fight.trash": "§cYou seem to be very confident♡But I still advise you to give up~",
-  "msg.toneko.death": "§aOni-chan is such a bastard♡, I can't beat this~",
-  "msg.toneko.death.trash": "§cIs this your strength? It's nothing more than that~",
-  "msg.toneko.win": "§aOkay! Onii-chan, you win!",
-  "msg.toneko.win.trash": "§cZayujiang's luck is really good~♡"
+  "command.toneko.player.success": "§a你现在成为了 §6%d §a的主人喵~",
+  "command.toneko.player.notNeko": "§c玩家 %d 不是猫娘喵~",
+  "command.toneko.player.alreadyOwner": "§a已经是 §6%d §a的主人了喵~",
+  "command.toneko.aliases.add": "§a成功设置别名 %d 了喵",
+  "command.toneko.aliases.remove": "§a成功删除别名 %d 了喵",
+  "messages.toneko.block.remove": "§a成功删除了这个屏蔽词喵",
+  "messages.toneko.block.add": "§a成功添加屏蔽词了喵",
+  "command.toneko.xp": "§a你与 %d 猫娘的好感经验为§a是 %d 喵~",
+  "command.toneko.remove": "§a你现在不是 %d 的主人了喵~",
+  "command.toneko.help": "§b/toneko 帮助:\n§a/toneko help §b我相信你肯定知道这个命令是做什么的喵\n§a/toneko player <玩家名> §b成为一位猫娘的主人\n§a/toneko aliases <猫娘名称> add或remove <别名> §b为你添加或删除别名（会转换为'主人'的词）\n§a/toneko block <猫娘名称> add或remove <屏蔽词> <替换词> word或all §b添加屏蔽词（屏蔽词会被替换成替换词)",
+  "command.toneko.noPermission": "§a你没有权限执行这个命令哦",
+  "command.tonekoadmin.set.false": "§a成功将 %d 取消设置为猫娘了喵",
+  "command.tonekoadmin.set.true": "§a成功将 %d 设置为猫娘了喵",
+  "command.tonekoadmin.reload": "§a成功重载了配置文件和语言文件了喵",
+  "command.tonekoadmin.help": "§b/tonekoadmin 帮助:\n§a/tonekoadmin help §b获取帮助\n§a/tonekoadmin set <玩家名称> §b将玩家设置为猫娘或取消设置\n§a/tonekoadmin reload §b重新加载配置文件和语言文件",
+  "messages.toneko.notOwner": "§c你不是 %d 的主人喵~",
+  "title.toneko.become": "§a你变成一只猫娘了喵~",
+  "subtitle.toneko.become": "§6来体验猫猫的快乐吧",
+  "advancements.toneko.root.title": "§a成为一只猫猫吧",
+  "advancements.toneko.root.description": "§b获取猫娘药水",
+  "misc.toneko.owner": "主人",
+  "misc.toneko.nya": "喵~",
+  "misc.toneko.prefix": "猫娘"
 }
