--- a/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -21,62 +21,5 @@
   "advancements.toneko.root.description": "§b获取猫娘药水",
   "misc.toneko.owner": "主人",
   "misc.toneko.nya": "喵~",
-  "misc.toneko.prefix": "猫娘",
-
-
-
-
-  "command.toneko.player.success": "§a成功将玩家§6%d§a设置成一个猫娘，你成为了它的主人",
-  "command.toneko.player.nekoed": "§b它已经是一个猫娘了，它的主人是§6%d",
-  "command.toneko.notOwner": "§c你不是%d的主人",
-  "command.toneko.aliases.add.true" : "§a成功设置别名!",
-  "command.toneko.aliases.add.exists" : "§c别名已存在",
-  "command.toneko.aliases.remove.no": "§c别名不存在",
-  "command.toneko.aliases.remove.true": "§a成功删除别名!",
-  "command.no-permission": "§c你没有权限执行这个命令",
-  "command.parameter.error": "§c输入的参数有误",
-  "command.toneko.block.exists": "§c屏蔽词已存在",
-  "command.toneko.block.no-exists": "§c屏蔽词不存在",
-  "command.toneko.block.add.success": "§a成功添加屏蔽词",
-  "command.toneko.block.remove.success": "§a成功删除屏蔽词",
-  "command.toneko.xp": "§a你与%d的好感经验为%c",
-  "command.toneko.remove.confirm": "§c请再次执行该命令以确认",
-  "command.toneko.remove.success": "§a成功删除猫娘 %d",
-  "command.toneko.everyone": "§a成功将所有玩家都变成猫娘啦~主人是Crystal_Neko哦~",
-  "command.neko.help": "§b/neko 帮助:\n§a/neko help §b获取帮助\n§a/neko jump §b获取跳跃提升",
-  "command.neko.not-neko": "§c你不是猫娘，无法执行该命令",
-  "command.aineko.help": "§b/aineko 帮助:\n§a/aineko help §b获取帮助\n§a/aineko add <名称> §b添加一个AI猫娘\n§a/aineko remove <名称> §b删除一个AI猫娘\n",
-  "command.totrash.set": "§a嗯哼~♡欧尼酱这么想让我叫你杂鱼吗?♡那就成全你吧,杂鱼酱~♡",
-  "chat.neko.nya": "喵~",
-  "chat.neko.prefix": "§a猫娘",
-  "chat.neko.owner": "主人",
-  "base.null.owner": "没有主人",
-  "item.stick" : "§9§o撅猫棍",
-  "item.stick-lore": "§9§o它不防水",
-  "item.stick-level-2": "§9§o二级撅猫棍",
-  "item.stick-level-2-lore": "§9§oIP68级防水",
-  "item.toneko.empty": " ",
-  "item.toneko.neko_spawn_egg": "猫娘刷怪蛋",
-  "attack.add-xp": "§6你与%d的好感经验提升了%c",
-  "client.screen.InstalledOptifine": "检测到安装了Optifine!",
-  "client.screen.InstalledOptifine.text": "ToNeko和Optifine一起使用会导致崩溃等问题，如果是在与Optifine同时使用时出现了问题，请不要反馈。如果你需要优化和使用光影，请使用Sodium+Iris",
-  "client.screen.InstalledOptifine.button.sodium": "下载Sodium",
-  "client.screen.InstalledOptifine.button.iris": "下载Iris",
-
-  "msg.toneko.join": "§a♡吶吶，欧尼酱♡，欢迎加入游戏~",
-  "msg.toneko.join.trash": "§c哟哟，♡杂鱼酱♡，你怎么来了?",
-  "msg.toneko.leave": "§a♡欧尼酱♡，再见喵~",
-  "msg.toneko.leave.trash": "§c快走吧，♡杂鱼酱♡",
-  "msg.toneko.hurt": "§a你没事吧，欧尼酱，有受伤吗？",
-  "msg.toneko.hurt.trash": "§c这都躲不过，真是个杂鱼呢~♡",
-  "msg.toneko.high-hurt": "§a诶呀(°Д°)，看起来欧尼酱伤的很严重呢",
-  "msg.toneko.high-hurt.trash": "§c嗯？杂鱼酱可真是很一般呢~♡",
-  "msg.toneko.low-heart": "§a坚持住，欧尼酱，我相信你可以的♡",
-  "msg.toneko.low-heart.trash": "§c杂鱼酱可真是菜呢~♡",
-  "msg.toneko.fight": "§a欧尼酱，加油哦，你一定可以的♡",
-  "msg.toneko.fight.trash": "§c看样子你很自信呢♡但是我还是劝你放弃吧~",
-  "msg.toneko.death": "§a欧尼酱可真是个杂鱼呢♡，这都打不过~",
-  "msg.toneko.death.trash": "§c这就是你的实力吗，也不过如此嘛~",
-  "msg.toneko.win": "§a好耶！欧尼酱，你赢了!",
-  "msg.toneko.win.trash": "§c杂鱼酱的运气可真是好呢~♡"
+  "misc.toneko.prefix": "猫娘"
 }
