终于弄好dataGen啦(・∀・)
1.0-pre可以发布了呢(｡◕‿◕｡)

--- a/src/main/resources/assets/toneko/lang/en_us.json
+++ b/src/main/resources/assets/toneko/lang/en_us.json
@@ -1,25 +1,26 @@
 {
-  "command.toneko.player.success": "§a你现在成为了 §6%d §a的主人喵~",
-  "command.toneko.player.notNeko": "§c玩家 %d 不是猫娘喵~",
-  "command.toneko.player.alreadyOwner": "§a已经是 §6%d §a的主人了喵~",
-  "command.toneko.aliases.add": "§a成功设置别名 %d 了喵",
-  "command.toneko.aliases.remove": "§a成功删除别名 %d 了喵",
-  "messages.toneko.block.remove": "§a成功删除了这个屏蔽词喵",
-  "messages.toneko.block.add": "§a成功添加屏蔽词了喵",
-  "command.toneko.xp": "§a你与 %d 猫娘的好感经验为§a是 %d 喵~",
-  "command.toneko.remove": "§a你现在不是 %d 的主人了喵~",
-  "command.toneko.help": "§b/toneko 帮助:\n§a/toneko help §b我相信你肯定知道这个命令是做什么的喵\n§a/toneko player <玩家名> §b成为一位猫娘的主人\n§a/toneko aliases <猫娘名称> add或remove <别名> §b为你添加或删除别名（会转换为'主人'的词）\n§a/toneko block <猫娘名称> add或remove <屏蔽词> <替换词> word或all §b添加屏蔽词（屏蔽词会被替换成替换词)",
-  "command.toneko.noPermission": "§a你没有权限执行这个命令哦",
-  "command.tonekoadmin.set.false": "§a成功将 %d 取消设置为猫娘了喵",
-  "command.tonekoadmin.set.true": "§a成功将 %d 设置为猫娘了喵",
-  "command.tonekoadmin.reload": "§a成功重载了配置文件和语言文件了喵",
-  "command.tonekoadmin.help": "§b/tonekoadmin 帮助:\n§a/tonekoadmin help §b获取帮助\n§a/tonekoadmin set <玩家名称> §b将玩家设置为猫娘或取消设置\n§a/tonekoadmin reload §b重新加载配置文件和语言文件",
-  "messages.toneko.notOwner": "§c你不是 %d 的主人喵~",
-  "title.toneko.become": "§a你变成一只猫娘了喵~",
-  "subtitle.toneko.become": "§6来体验猫猫的快乐吧",
-  "advancements.toneko.root.title": "§a成为一只猫猫吧",
-  "advancements.toneko.root.description": "§b获取猫娘药水",
-  "misc.toneko.owner": "主人",
-  "misc.toneko.nya": "喵~",
-  "misc.toneko.prefix": "猫娘"
+  "item.toneko.neko_potion.effect.empty": "neko potion",
+  "command.toneko.player.success": "§aYou become §6%d §a's owner now-nya",
+  "command.toneko.player.notNeko": "§cPlayer %d §cisn't a neko~",
+  "command.toneko.player.alreadyOwner": "§aYou have already been §6%d §a's owner~",
+  "command.toneko.aliases.add": "§aSet alias %d succeed!",
+  "command.toneko.aliases.remove": "§aRemove alias %d succeed!",
+  "messages.toneko.block.remove": "§aRemove the blocked word succeed!",
+  "messages.toneko.block.add": "§aAdd the blocked word succeed",
+  "command.toneko.xp": "§aThe xp between neko %d §a and you is %d-nya",
+  "command.toneko.remove": "§aNow you are not %d §a's owner~",
+  "command.toneko.help": "§b/toneko help:\n§a/toneko help §bI am sure you know what this command can do.\n§a/toneko player <player> §bBe a neko's owner\n§a/toneko aliases <neko> add or remove <alias> §bAdd a alias to neko（If neko say the word,the word will become 'owner'）\n§a/toneko block <neko> add or remove <blocked word> <replacement> word or all §bAdd a blocked word（the blocked word will replace with replacement)",
+  "command.toneko.noPermission": "§aThat's sad because you have no permission to do this command",
+  "command.tonekoadmin.set.false": "§aSet %d to neko succeed!",
+  "command.tonekoadmin.set.true": "§aUnset %d to neko succeed!",
+  "command.tonekoadmin.reload": "§aReload the config and language succeed!",
+  "command.tonekoadmin.help": "§b/tonekoadmin help:\n§a/tonekoadmin help §bget help\n§a/tonekoadmin set <player> §bSet player to neko or unset\n§a/tonekoadmin reload §bReload the config and language",
+  "messages.toneko.notOwner": "§cYou are not %d 's owner~",
+  "title.toneko.become": "§dYou become a neko now!",
+  "subtitle.toneko.become": "§aCome and experience the happiness of neko!",
+  "advancements.toneko.root.title": "§aBecome a neko!",
+  "advancements.toneko.root.description": "§dGet neko potion",
+  "misc.toneko.owner": "owner",
+  "misc.toneko.nya": "meow~",
+  "misc.toneko.prefix": "§aneko"
 }
