--- a/src/main/resources/assets/toneko/lang/en_us.json
+++ b/src/main/resources/assets/toneko/lang/en_us.json
@@ -5,8 +5,6 @@
   "command.toneko.player.alreadyOwner": "§aYou have already been §6%d §a's owner~",
   "command.toneko.aliases.add": "§aSet alias %d succeed!",
   "command.toneko.aliases.remove": "§aRemove alias %d succeed!",
-  "messages.toneko.block.remove": "§aRemove the blocked word succeed!",
-  "messages.toneko.block.add": "§aAdd the blocked word succeed",
   "command.toneko.xp": "§aThe xp between neko %d §a and you is %d-nya",
   "command.toneko.remove": "§aNow you are not %d §a's owner~",
   "command.toneko.help": "§b/toneko help:\n§a/toneko help §bI am sure you know what this command can do.\n§a/toneko player <player> §bBe a neko's owner\n§a/toneko aliases <neko> add or remove <alias> §bAdd a alias to neko（If neko say the word,the word will become 'owner'）\n§a/toneko block <neko> add or remove <blocked word> <replacement> word or all §bAdd a blocked word（the blocked word will replace with replacement)",
@@ -15,7 +13,11 @@
   "command.tonekoadmin.set.true": "§aUnset %d to neko succeed!",
   "command.tonekoadmin.reload": "§aReload the config and language succeed!",
   "command.tonekoadmin.help": "§b/tonekoadmin help:\n§a/tonekoadmin help §bget help\n§a/tonekoadmin set <player> §bSet player to neko or unset\n§a/tonekoadmin reload §bReload the config and language",
+  "command.neko.help": "§b/neko getHelp(These commands only for neko):\n§a/neko jump §bJump higher!\n§a/neko vision §bDo you want to see clearly as a neko at night?\n§a/neko speed §bToo quickly(>_<)",
+  "command.neko.not_neko": "§cYou are not a neko",
   "messages.toneko.notOwner": "§cYou are not %d 's owner~",
+  "messages.toneko.block.remove": "§aRemove the blocked word succeed!",
+  "messages.toneko.block.add": "§aAdd the blocked word succeed",
   "title.toneko.become": "§dYou become a neko now!",
   "subtitle.toneko.become": "§aCome and experience the happiness of neko!",
   "advancements.toneko.root.title": "§aBecome a neko!",
