--- a/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -5,8 +5,6 @@
   "command.toneko.player.alreadyOwner": "§a已经是 §6%d §a的主人了喵~",
   "command.toneko.aliases.add": "§a成功设置别名 %d 了喵",
   "command.toneko.aliases.remove": "§a成功删除别名 %d 了喵",
-  "messages.toneko.block.remove": "§a成功删除了这个屏蔽词喵",
-  "messages.toneko.block.add": "§a成功添加屏蔽词了喵",
   "command.toneko.xp": "§a你与 %d 猫娘的好感经验为§a是 %d 喵~",
   "command.toneko.remove": "§a你现在不是 %d 的主人了喵~",
   "command.toneko.help": "§b/toneko 帮助:\n§a/toneko help §b我相信你肯定知道这个命令是做什么的喵\n§a/toneko player <玩家名> §b成为一位猫娘的主人\n§a/toneko aliases <猫娘名称> add或remove <别名> §b为你添加或删除别名（会转换为'主人'的词）\n§a/toneko block <猫娘名称> add或remove <屏蔽词> <替换词> word或all §b添加屏蔽词（屏蔽词会被替换成替换词)",
@@ -15,6 +13,10 @@
   "command.tonekoadmin.set.true": "§a成功将 %d 设置为猫娘了喵",
   "command.tonekoadmin.reload": "§a成功重载了配置文件和语言文件了喵",
   "command.tonekoadmin.help": "§b/tonekoadmin 帮助:\n§a/tonekoadmin help §b获取帮助\n§a/tonekoadmin set <玩家名称> §b将玩家设置为猫娘或取消设置\n§a/tonekoadmin reload §b重新加载配置文件和语言文件",
+  "command.neko.help": "§b/neko 帮助(注意哦,这些命令都是猫猫专有的哦):\n§a/neko jump §b跳的更高!\n§a/neko vision §b想和猫猫一样在夜晚看得更清楚吗\n§a/neko speed §b太快啦(>_<)",
+  "command.neko.not_neko": "§c你并不是一只猫猫哦",
+  "messages.toneko.block.remove": "§a成功删除了这个屏蔽词喵",
+  "messages.toneko.block.add": "§a成功添加屏蔽词了喵",
   "messages.toneko.notOwner": "§c你不是 %d 的主人喵~",
   "title.toneko.become": "§d你变成一只猫娘啦",
   "subtitle.toneko.become": "§a来体验猫猫的快乐吧",
