--- a/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -15,6 +15,12 @@
   "command.tonekoadmin.help": "§b/tonekoadmin 帮助:\n§a/tonekoadmin help §b获取帮助\n§a/tonekoadmin set <玩家名称> §b将玩家设置为猫娘或取消设置\n§a/tonekoadmin reload §b重新加载配置文件和语言文件",
   "command.neko.help": "§b/neko 帮助(注意哦,这些命令都是猫猫专有的哦):\n§a/neko jump §b跳的更高!\n§a/neko vision §b想和猫猫一样在夜晚看得更清楚吗\n§a/neko speed §b太快啦(>_<)",
   "command.neko.not_neko": "§c你并不是一只猫猫哦",
+  "command.quirk.help": "§b/quirk 帮助:\n§a/quirk help §b我相信你肯定知道这个命令是做什么的喵\n§a/quirk add <性癖> §b添加性癖\n§a/quirk remove <性癖> §b删除性癖",
+  "command.quirk.remove": "§a成功删除了 %d 性癖了喵",
+  "command.quirk.add": "§a成功添加了 %d 性癖了喵",
+  "command.quirk.not_quirk": "§c这个性癖不存在喵~",
+  "command.quirk.already_quirk": "§c这个性癖已经存在了喵~",
+  "command.quirk.not_has_quirk": "§c你还没有设置这个性癖哦",
   "messages.toneko.block.remove": "§a成功删除了这个屏蔽词喵",
   "messages.toneko.block.add": "§a成功添加屏蔽词了喵",
   "messages.toneko.notOwner": "§c你不是 %d 的主人喵~",
