稍微完善了一下性癖功能,添加昵称,还有...完善口癖!

--- a/src/main/resources/assets/toneko/lang/en_us.json
+++ b/src/main/resources/assets/toneko/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "item.toneko.neko_potion.effect.empty": "neko potion",
+  "quirk.toneko.caress": "caress",
   "command.toneko.player.success": "§aYou become §6%d §a's owner now-nya",
   "command.toneko.player.notNeko": "§cPlayer %d §cisn't a neko~",
   "command.toneko.player.alreadyOwner": "§aYou have already been §6%d §a's owner~",
@@ -13,8 +14,17 @@
   "command.tonekoadmin.set.true": "§aUnset %d to neko succeed!",
   "command.tonekoadmin.reload": "§aReload the config and language succeed!",
   "command.tonekoadmin.help": "§b/tonekoadmin help:\n§a/tonekoadmin help §bget help\n§a/tonekoadmin set <player> §bSet player to neko or unset\n§a/tonekoadmin reload §bReload the config and language",
-  "command.neko.help": "§b/neko getHelp(These commands only for neko):\n§a/neko jump §bJump higher!\n§a/neko vision §bDo you want to see clearly as a neko at night?\n§a/neko speed §bToo quickly(>_<)",
+  "command.neko.help": "§b/neko getHelp(These commands only for neko):\n§a/neko jump §bJump higher!\n§a/neko vision §bDo you want to see clearly as a neko at night?\n§a/neko speed §bToo quickly(>_<)\n§a/neko lie §bLie down and rest for a while\n§a/neko nickname <昵称> §bSet a cute nickname",
   "command.neko.not_neko": "§cYou are not a neko",
+  "command.neko.nickname.success": "§aYour nickname is %d §a now",
+  "command.quirk.help": "§b/quirk help:\n§a/quirk help §bI am sure you know what this command can do.\n§a/quirk add <quirk> §bAdd a quirk\n§a/quirk remove <quirk> §bRemove a quirk\n§a/quirk list §bList all quirks",
+  "command.quirk.remove": "§aRemove quirk %d §a successful",
+  "command.quirk.add": "§aAdd quirk %d §a successful",
+  "command.quirk.not_quirk": "§cThis quirk hasn't existed",
+  "command.quirk.already_quirk": "§cThis quirk has already existed",
+  "command.quirk.not_has_quirk": "§cYou hasn't set this quirk",
+  "command.quirk.no_any_quirk": "§aYou hasn't set any quirk~",
+  "command.quirk.list": "§aYou ha set these quirks: ",
   "messages.toneko.notOwner": "§cYou are not %d 's owner~",
   "messages.toneko.block.remove": "§aRemove the blocked word succeed!",
   "messages.toneko.block.add": "§aAdd the blocked word succeed",
