--- a/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -1,5 +1,6 @@
 {
   "item.toneko.neko_potion.effect.empty": "猫娘药水",
+  "quirk.toneko.caress": "抚摸",
   "command.toneko.player.success": "§a你现在成为了 §6%d §a的主人喵~",
   "command.toneko.player.notNeko": "§c玩家 %d 不是猫娘喵~",
   "command.toneko.player.alreadyOwner": "§a已经是 §6%d §a的主人了喵~",
@@ -13,14 +14,17 @@
   "command.tonekoadmin.set.true": "§a成功将 %d 设置为猫娘了喵",
   "command.tonekoadmin.reload": "§a成功重载了配置文件和语言文件了喵",
   "command.tonekoadmin.help": "§b/tonekoadmin 帮助:\n§a/tonekoadmin help §b获取帮助\n§a/tonekoadmin set <玩家名称> §b将玩家设置为猫娘或取消设置\n§a/tonekoadmin reload §b重新加载配置文件和语言文件",
-  "command.neko.help": "§b/neko 帮助(注意哦,这些命令都是猫猫专有的哦):\n§a/neko jump §b跳的更高!\n§a/neko vision §b想和猫猫一样在夜晚看得更清楚吗\n§a/neko speed §b太快啦(>_<)",
+  "command.neko.help": "§b/neko 帮助(注意哦,这些命令都是猫猫专有的哦):\n§a/neko jump §b跳的更高!\n§a/neko vision §b想和猫猫一样在夜晚看得更清楚吗\n§a/neko speed §b太快啦(>_<)\n§a/neko lie §b躺下来休息会吧\n§a/neko nickname <昵称> §b设置一个可爱的昵称吧",
   "command.neko.not_neko": "§c你并不是一只猫猫哦",
-  "command.quirk.help": "§b/quirk 帮助:\n§a/quirk help §b我相信你肯定知道这个命令是做什么的喵\n§a/quirk add <性癖> §b添加性癖\n§a/quirk remove <性癖> §b删除性癖",
-  "command.quirk.remove": "§a成功删除了 %d 性癖了喵",
-  "command.quirk.add": "§a成功添加了 %d 性癖了喵",
+  "command.neko.nickname.success": "§a现在你的昵称是 %d §a啦",
+  "command.quirk.help": "§b/quirk 帮助:\n§a/quirk help §b我相信你肯定知道这个命令是做什么的喵\n§a/quirk add <性癖> §b添加性癖\n§a/quirk remove <性癖> §b删除性癖\n§a/quirk list §b列出所有性癖",
+  "command.quirk.remove": "§a成功删除了 %d §a性癖了喵",
+  "command.quirk.add": "§a成功添加了 %d §a性癖了喵",
   "command.quirk.not_quirk": "§c这个性癖不存在喵~",
   "command.quirk.already_quirk": "§c这个性癖已经存在了喵~",
   "command.quirk.not_has_quirk": "§c你还没有设置这个性癖哦",
+  "command.quirk.no_any_quirk": "§a你还没有设置任何性癖哦喵~",
+  "command.quirk.list": "§a你设置了这些性癖: ",
   "messages.toneko.block.remove": "§a成功删除了这个屏蔽词喵",
   "messages.toneko.block.add": "§a成功添加屏蔽词了喵",
   "messages.toneko.notOwner": "§c你不是 %d 的主人喵~",
