--- a/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -1,6 +1,8 @@
 {
   "item.toneko.neko_potion.effect.empty": "猫娘药水",
   "quirk.toneko.caress": "抚摸",
+  "quirk.toneko.caress.use": "§d你轻轻抚摸了 %d §d喵~",
+  "quirk.toneko.caress.be_used": "§d你被 %d §d轻轻地抚摸了一下喵~",
   "command.toneko.player.success": "§a你现在成为了 §6%d §a的主人喵~",
   "command.toneko.player.notNeko": "§c玩家 %d 不是猫娘喵~",
   "command.toneko.player.alreadyOwner": "§a已经是 §6%d §a的主人了喵~",
@@ -14,9 +16,11 @@
   "command.tonekoadmin.set.true": "§a成功将 %d 设置为猫娘了喵",
   "command.tonekoadmin.reload": "§a成功重载了配置文件和语言文件了喵",
   "command.tonekoadmin.help": "§b/tonekoadmin 帮助:\n§a/tonekoadmin help §b获取帮助\n§a/tonekoadmin set <玩家名称> §b将玩家设置为猫娘或取消设置\n§a/tonekoadmin reload §b重新加载配置文件和语言文件",
-  "command.neko.help": "§b/neko 帮助(注意哦,这些命令都是猫猫专有的哦):\n§a/neko jump §b跳的更高!\n§a/neko vision §b想和猫猫一样在夜晚看得更清楚吗\n§a/neko speed §b太快啦(>_<)\n§a/neko lie §b躺下来休息会吧\n§a/neko nickname <昵称> §b设置一个可爱的昵称吧",
+  "command.neko.help": "§b/neko 帮助(注意哦,这些命令都是猫猫专有的哦):\n§a/neko jump §b跳的更高!\n§a/neko vision §b想和猫猫一样在夜晚看得更清楚吗\n§a/neko speed §b太快啦(>_<)\n§a/neko lie §b躺下来休息会吧\n§a/neko nickname <昵称> §b设置一个可爱的昵称吧\n§a/neko level §b看看你的猫猫等级\n§a/neko lore <描述> §b给你手中的物品设置一个可爱的描述吧",
   "command.neko.not_neko": "§c你并不是一只猫猫哦",
   "command.neko.nickname.success": "§a现在你的昵称是 %d §a啦",
+  "command.neko.level.success": "§a你的猫猫等级是 %d §a啦",
+  "command.neko.lore.no_item": "§c你手上什么都没有诶",
   "command.quirk.help": "§b/quirk 帮助:\n§a/quirk help §b我相信你肯定知道这个命令是做什么的喵\n§a/quirk add <性癖> §b添加性癖\n§a/quirk remove <性癖> §b删除性癖\n§a/quirk list §b列出所有性癖",
   "command.quirk.remove": "§a成功删除了 %d §a性癖了喵",
   "command.quirk.add": "§a成功添加了 %d §a性癖了喵",
