--- a/src/main/resources/assets/toneko/lang/ko_kr.json
+++ b/src/main/resources/assets/toneko/lang/ko_kr.json
@@ -1,5 +1,6 @@
 {
   "item.toneko.neko_potion.effect.empty": "네코 물약",
+  "item.toneko.neko_tail": "고양이 꼬리",
   "quirk.toneko.caress": "caress",
   "quirk.toneko.caress.use": "§d부드럽게 쓰다듬으셨습니다 %d.",
   "quirk.toneko.caress.be_used": "§d당신은 부드럽게 쓰다듬어졌습니다 %d",
