--- a/src/main/resources/assets/toneko/lang/en_us.json
+++ b/src/main/resources/assets/toneko/lang/en_us.json
@@ -1,6 +1,7 @@
 {
   "item.toneko.neko_potion.effect.empty": "Neko Potion",
   "item.toneko.neko_tail": "Neko Tail",
+  "enchantment.toneko.reversion": "Reversion",
   "quirk.toneko.caress": "caress",
   "quirk.toneko.caress.use": "§dYou gently stroked %d.",
   "quirk.toneko.caress.be_used": "§dYou were gently petted by %d",
