--- a/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -1,6 +1,7 @@
 {
   "item.toneko.neko_potion.effect.empty": "猫娘药水",
   "item.toneko.neko_tail": "猫尾巴",
+  "item.toneko.neko_ears": "猫耳朵",
   "enchantment.toneko.reversion": "反转",
   "quirk.toneko.caress": "抚摸",
   "quirk.toneko.caress.use": "§d你轻轻抚摸了 %d §d喵~",
