--- a/src/main/resources/assets/toneko/lang/zh_tw.json
+++ b/src/main/resources/assets/toneko/lang/zh_tw.json
@@ -1,6 +1,7 @@
 {
   "item.toneko.neko_potion.effect.empty": "貓娘藥水",
   "item.toneko.neko_tail": "貓尾巴",
+  "item.toneko.neko_ears": "貓耳朵",
   "enchantment.toneko.reversion": "反轉",
   "quirk.toneko.caress": "撫摸",
   "quirk.toneko.caress.use": "§d你輕輕撫摸了 %d §d喵～",
