添加猫猫收集器和相关的东西

--- a/src/main/resources/assets/toneko/lang/en_us.json
+++ b/src/main/resources/assets/toneko/lang/en_us.json
@@ -2,6 +2,9 @@
   "item.toneko.neko_potion.effect.empty": "Neko Potion",
   "item.toneko.neko_tail": "Neko Tail",
   "item.toneko.neko_ears": "Neko ears",
+  "item.toneko.neko_collector": "Neko collector",
+  "item.toneko.neko_collector.info": "%d / %d Neko Energy already",
+  "attribute.name.neko.degree": "neko degree",
   "enchantment.toneko.reversion": "Reversion",
   "quirk.toneko.caress": "caress",
   "quirk.toneko.caress.use": "§dYou gently stroked %d.",
