--- a/src/main/resources/assets/toneko/lang/zh_tw.json
+++ b/src/main/resources/assets/toneko/lang/zh_tw.json
@@ -2,6 +2,9 @@
   "item.toneko.neko_potion.effect.empty": "貓娘藥水",
   "item.toneko.neko_tail": "貓尾巴",
   "item.toneko.neko_ears": "貓耳朵",
+  "item.toneko.neko_collector": "猫猫吸收器",
+  "item.toneko.neko_collector.info": "已有%d / %d 猫猫能量",
+  "attribute.name.neko.degree": "猫猫等级",
   "enchantment.toneko.reversion": "反轉",
   "quirk.toneko.caress": "撫摸",
   "quirk.toneko.caress.use": "§d你輕輕撫摸了 %d §d喵～",
