--- a/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -2,6 +2,9 @@
   "item.toneko.neko_potion.effect.empty": "猫娘药水",
   "item.toneko.neko_tail": "猫尾巴",
   "item.toneko.neko_ears": "猫耳朵",
+  "item.toneko.neko_collector": "猫猫吸收器",
+  "item.toneko.neko_collector.info": "已经吸收 %d / %d 猫猫能量啦",
+  "attribute.name.neko.degree": "猫猫等级",
   "enchantment.toneko.reversion": "反转",
   "quirk.toneko.caress": "抚摸",
   "quirk.toneko.caress.use": "§d你轻轻抚摸了 %d §d喵~",
