修复一点小问题，添加NekoPaws

--- a/src/main/resources/assets/toneko/lang/en_us.json
+++ b/src/main/resources/assets/toneko/lang/en_us.json
@@ -43,8 +43,12 @@
   "messages.toneko.client.join": "§aTips: If there is any error in chat, you don't need to care about it.",
   "title.toneko.become": "§dYou become a neko now!",
   "subtitle.toneko.become": "§aCome and experience the happiness of neko!",
-  "advancements.toneko.root.title": "§aBecome a neko!",
-  "advancements.toneko.root.description": "§dGet neko potion",
+  "advancements.toneko.root.title": "§aStick to cats",
+  "advancements.toneko.root.description": "§dMake a Neko Collector, then stick to cats to absorb cat energy",
+  "advancements.toneko.got_neko_potion.title": "§aBecome a neko",
+  "advancements.toneko.got_neko_potion.description": "§dGet neko potion",
+  "advancements.toneko.neko_armor.title": "§aMeow, neko tails wag",
+  "advancements.toneko.neko_armor.description": "§dWear neko gear",
   "misc.toneko.owner": "owner",
   "misc.toneko.nya": "meow~",
   "misc.toneko.prefix": "§aneko"
