--- a/src/main/resources/assets/toneko/lang/ko_kr.json
+++ b/src/main/resources/assets/toneko/lang/ko_kr.json
@@ -38,8 +38,12 @@
   "messages.toneko.client.join": "§a팁: 채팅에 오류가 있어도 신경쓰지 않아도 됩니다.",
   "title.toneko.become": "§d당신도 이제 네코가 됩니다!",
   "subtitle.toneko.become": "§a네코의 행복을 경험해 보세요!",
-  "advancements.toneko.root.title": "§a네코가 되어보세요!",
-  "advancements.toneko.root.description": "§d네코 물약 얻기",
+  "advancements.toneko.root.title": "§a와 마오마오의 결속",
+  "advancements.toneko.root.description": "§d야옹 수집기를 만든 다음 고양이와 함께 붙여 고양이의 에너지를 흡수하세요.",
+  "advancements.toneko.got_neko_potion.title": "§a고양이가 되기",
+  "advancements.toneko.got_neko_potion.description": "§d네코 물약 얻기",
+  "advancements.toneko.neko_armor.title": "§a 야옹, 고양이 꼬리가 흔들립니다",
+  "advancements.toneko.neko_armor.description": "§d고양이 장비 착용",
   "misc.toneko.owner": "소유자",
   "misc.toneko.nya": "냥~",
   "misc.toneko.prefix": "§a고양이"
