--- a/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -2,7 +2,7 @@
   "item.toneko.neko_potion.effect.empty": "猫娘药水",
   "item.toneko.neko_tail": "猫尾巴",
   "item.toneko.neko_ears": "猫耳朵",
-  "item.toneko.neko_collector": "猫猫吸收器",
+  "item.toneko.neko_collector": "喵喵吸收器",
   "item.toneko.neko_collector.info": "已经吸收 %d / %d 猫猫能量啦",
   "attribute.name.neko.degree": "猫猫等级",
   "enchantment.toneko.reversion": "反转",
@@ -43,8 +43,12 @@
   "messages.toneko.client.join": "§a小提示: 如果聊天栏出现了一堆错误代码,你可以不用管它哦",
   "title.toneko.become": "§d你变成一只猫娘啦",
   "subtitle.toneko.become": "§a来体验猫猫的快乐吧",
-  "advancements.toneko.root.title": "§a成为一只猫猫吧",
-  "advancements.toneko.root.description": "§d获取猫娘药水",
+  "advancements.toneko.root.title": "§a和猫猫贴贴",
+  "advancements.toneko.root.description": "§d制作一个喵喵收集器，然后与猫猫贴贴来吸收猫猫能量",
+  "advancements.toneko.got_neko_potion.title": "§a成为一只猫猫吧",
+  "advancements.toneko.got_neko_potion.description": "§d获取猫娘药水",
+  "advancements.toneko.neko_armor.title": "§a喵喵叫，猫尾巴摇",
+  "advancements.toneko.neko_armor.description": "§d穿上猫猫的装备",
   "misc.toneko.owner": "主人",
   "misc.toneko.nya": "喵~",
   "misc.toneko.prefix": "§a猫娘"
