--- a/src/main/resources/assets/toneko/lang/zh_tw.json
+++ b/src/main/resources/assets/toneko/lang/zh_tw.json
@@ -43,8 +43,12 @@
   "messages.toneko.client.join": "§a小提示：如果聊天欄出現了一堆錯誤代碼，你可以不用管它喔",
   "title.toneko.become": "§d你變成一隻貓娘啦",
   "subtitle.toneko.become": "§a來體驗貓貓的快樂吧",
-  "advancements.toneko.root.title": "§a成為一隻貓貓吧",
-  "advancements.toneko.root.description": "§d取得貓娘藥水",
+  "advancements.toneko.root.title": "§a與貓貓貼紙",
+  "advancements.toneko.root.description": "§d製作一個喵喵收集器，然後與貓貓貼貼來吸收貓貓能量",
+  "advancements.toneko.got_neko_potion.title": "§a成為貓貓吧",
+  "advancements.toneko.got_neko_potion.description": "§d取得貓娘藥水",
+  "advancements.toneko.neko_armor.title": "§a喵喵叫，貓尾巴搖",
+  "advancements.toneko.neko_armor.description": "§d穿上貓貓的裝備",
   "misc.toneko.owner": "主人",
   "misc.toneko.nya": "喵～",
   "misc.toneko.prefix": "§a貓娘"
