--- a/src/main/resources/assets/toneko/lang/en_us.json
+++ b/src/main/resources/assets/toneko/lang/en_us.json
@@ -4,6 +4,7 @@
   "item.toneko.neko_ears": "Neko ears",
   "item.toneko.neko_collector": "Neko collector",
   "item.toneko.neko_collector.info": "%d / %d Neko Energy already",
+  "itemGroup.toneko": "Neko",
   "attribute.name.neko.degree": "neko degree",
   "enchantment.toneko.reversion": "Reversion",
   "quirk.toneko.caress": "caress",
