--- a/src/main/resources/assets/toneko/lang/zh_tw.json
+++ b/src/main/resources/assets/toneko/lang/zh_tw.json
@@ -4,6 +4,7 @@
   "item.toneko.neko_ears": "貓耳朵",
   "item.toneko.neko_collector": "猫猫吸收器",
   "item.toneko.neko_collector.info": "已有%d / %d 猫猫能量",
+  "itemGroup.toneko": "猫猫",
   "attribute.name.neko.degree": "猫猫等级",
   "enchantment.toneko.reversion": "反轉",
   "quirk.toneko.caress": "撫摸",
