添加按键绑定

--- a/common/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -10,6 +10,8 @@
   "quirk.toneko.caress": "抚摸",
   "quirk.toneko.caress.use": "§d你轻轻抚摸了 %d §d喵~",
   "quirk.toneko.caress.be_used": "§d你被 %d §d轻轻地抚摸了一下喵~",
+  "key.toneko.lie" : "躺下",
+  "key.toneko.lie.category": "喵喵",
   "command.toneko.not_player": "§c命令执行者只能是玩家哦",
   "command.toneko.not_found": "§c没找到这个玩家哦",
   "command.toneko.player.success": "§a你现在成为了 §6%d §a的主人喵~",
