修改Mixin，提升兼容性，修改common部分，添加一些皮肤相关的东西

--- a/common/src/main/resources/assets/toneko/lang/en_us.json
+++ b/common/src/main/resources/assets/toneko/lang/en_us.json
@@ -26,7 +26,11 @@
   "command.tonekoadmin.set.false": "§aSet %d to neko succeed!",
   "command.tonekoadmin.set.true": "§aUnset %d to neko succeed!",
   "command.tonekoadmin.reload": "§aReload the config and language succeed!",
-  "command.tonekoadmin.help": "§b/tonekoadmin help:\n§a/tonekoadmin help §bget help\n§a/tonekoadmin set <player> §bSet player to neko or unset\n§a/tonekoadmin reload §bReload the config and language",
+  "command.tonekoadmin.reload.data": "§aSuccessfully reloaded cat data file meow",
+  "command.tonekoadmin.skin.list": "§bAll cat skins are here:\n %d",
+  "command.tonekoadmin.skin.add": "§aSuccessfully added %d §a skins meow",
+  "command.tonekoadmin.skin.remove": "§aSuccessfully deleted %d §a skins meow",
+  "command.tonekoadmin.help": "§b/tonekoadmin help:\n§a/tonekoadmin help §bget help\n§a/tonekoadmin set <player> §bSet player to neko or unset\n§a/tonekoadmin reload §bReload the config and language\n§a/tonekoadmin skin §bNeko skin manage",
   "command.neko.help": "§b/neko getHelp(These commands only for neko):\n§a/neko jump §bJump higher!\n§a/neko vision §bDo you want to see clearly as a neko at night?\n§a/neko speed §bToo quickly(>_<)\n§a/neko lie §bLie down and rest for a while\n§a/neko nickname <nickname> §bSet a cute nickname\n§a/neko level §bShow your neko level\n§a/neko lore <lore> §bSet a cute lore for your item in hand.",
   "command.neko.not_neko": "§cYou are not a neko",
   "command.neko.nickname.success": "§aYour nickname is %d §a now",
