--- a/common/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -26,7 +26,11 @@
   "command.tonekoadmin.set.false": "§a成功将 %d 取消设置为猫娘了喵",
   "command.tonekoadmin.set.true": "§a成功将 %d 设置为猫娘了喵",
   "command.tonekoadmin.reload": "§a成功重载了配置文件和语言文件了喵",
-  "command.tonekoadmin.help": "§b/tonekoadmin 帮助:\n§a/tonekoadmin help §b获取帮助\n§a/tonekoadmin set <玩家名称> §b将玩家设置为猫娘或取消设置\n§a/tonekoadmin reload §b重新加载配置文件和语言文件",
+  "command.tonekoadmin.reload.data": "§a成功重载了猫猫数据文件了喵",
+  "command.tonekoadmin.skin.list": "§b所有的猫猫皮肤在这里啦:\n %d",
+  "command.tonekoadmin.skin.add": "§a成功添加了 %d §a的皮肤了喵",
+  "command.tonekoadmin.skin.remove": "§a成功删除了 %d §a的皮肤了喵",
+  "command.tonekoadmin.help": "§b/tonekoadmin 帮助:\n§a/tonekoadmin help §b获取帮助\n§a/tonekoadmin set <玩家名称> §b将玩家设置为猫娘或取消设置\n§a/tonekoadmin reload §b重新加载配置文件和语言文件\n§a/tonekoadmin skin §b猫猫皮肤管理",
   "command.neko.help": "§b/neko 帮助(注意哦,这些命令都是猫猫专有的哦):\n§a/neko jump §b跳的更高!\n§a/neko vision §b想和猫猫一样在夜晚看得更清楚吗\n§a/neko speed §b太快啦(>_<)\n§a/neko lie §b躺下来休息会吧\n§a/neko nickname <昵称> §b设置一个可爱的昵称吧\n§a/neko level §b看看你的猫猫等级\n§a/neko lore <描述> §b给你手中的物品设置一个可爱的描述吧",
   "command.neko.not_neko": "§c你并不是一只猫猫哦",
   "command.neko.nickname.success": "§a现在你的昵称是 %d §a啦",
