--- a/common/src/main/resources/assets/toneko/lang/zh_tw.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_tw.json
@@ -26,7 +26,11 @@
   "command.tonekoadmin.set.false": "§a成功將 %d 取消設定為貓娘了喵",
   "command.tonekoadmin.set.true": "§a成功將 %d 設定為貓娘了喵",
   "command.tonekoadmin.reload": "§a成功重載了設定檔和語言檔案了喵",
-  "command.tonekoadmin.help": "§b/tonekoadmin 幫助：\n§a/tonekoadmin help §b取得幫助\n§a/tonekoadmin set <玩家名稱> §b將玩家設定為貓娘或取消設定\n§a/tonekoadmin reload §b重新載入設定檔和語言檔案",
+  "command.tonekoadmin.reload.data": "§a成功重载了猫猫数据文件了喵",
+  "command.tonekoadmin.skin.list": "§b所有的猫猫皮肤在这里啦:\n %d",
+  "command.tonekoadmin.skin.add": "§a成功添加了 %d §a的皮肤了喵",
+  "command.tonekoadmin.skin.remove": "§a成功删除了 %d §a的皮肤了喵",
+  "command.tonekoadmin.help": "§b/tonekoadmin 幫助：\n§a/tonekoadmin help §b取得幫助\n§a/tonekoadmin set <玩家名稱> §b將玩家設定為貓娘或取消設定\n§a/tonekoadmin reload §b重新載入設定檔和語言檔案\n§a/tonekoadmin skin §b猫猫皮肤管理",
   "command.neko.help": "§b/neko 幫助（注意喔，這些指令都是貓貓專有的喔）：\n§a/neko jump §b跳得更高！\n§a/neko vision §b想和貓貓一樣在夜晚看得更清楚嗎\n§a/neko speed §b太快啦 (>_<)\n§a/neko lie §b躺下來休息會吧\n§a/neko nickname <暱稱> §b設定一個可愛的暱稱吧\n§a/neko level §b看看你的貓貓等級\n§a/neko lore <描述> §b給你手中的物品設定一個可愛的描述吧",
   "command.neko.not_neko": "§c你並不是一隻貓貓喔",
   "command.neko.nickname.success": "§a現在你的暱稱是 %d §a啦",
