--- a/common/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -12,6 +12,7 @@
   "quirk.toneko.caress.be_used": "§d你被 %d §d轻轻地抚摸了一下喵~",
   "key.toneko.lie" : "躺下",
   "key.toneko.lie.category": "喵喵",
+  "key.toneko.get_down": "趴下",
   "command.toneko.not_player": "§c命令执行者只能是玩家哦",
   "command.toneko.not_found": "§c没找到这个玩家哦",
   "command.toneko.player.success": "§a你现在成为了 §6%d §a的主人喵~",
