--- a/common/src/main/resources/assets/toneko/lang/zh_tw.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_tw.json
@@ -4,6 +4,8 @@
   "item.toneko.neko_ears": "貓耳朵",
   "item.toneko.neko_collector": "猫猫吸收器",
   "item.toneko.neko_collector.info": "已有%d / %d 猫猫能量",
+  "item.toneko.furry_bohe": "兽薄荷",
+  "item.toneko.furry_bohe.info": "Also try Furry Bohe",
   "itemGroup.toneko": "猫猫",
   "attribute.name.neko.degree": "猫猫等级",
   "enchantment.toneko.reversion": "反轉",
