完善性癖功能

--- a/common/src/main/resources/assets/toneko/lang/en_us.json
+++ b/common/src/main/resources/assets/toneko/lang/en_us.json
@@ -16,6 +16,7 @@
   "key.toneko.lie.category": "neko",
   "key.toneko.get_down": "get down",
   "key.toneko.ride": "try a ride",
+  "key.toneko.quirk": "open quirk GUI",
   "command.toneko.not_player": "§cOnly player can be command executor",
   "command.toneko.not_found": "§cUnable to find the player.",
   "command.toneko.player.success": "§aYou become §6%d §a's owner now-nya",
@@ -40,7 +41,7 @@
   "command.neko.nickname.success": "§aYour nickname is %d §a now",
   "command.neko.level.success": "§aYou neko level is %d",
   "command.neko.lore.no_item": "§cI can find air from your hand.",
-  "command.quirk.help": "§b/quirk help:\n§a/quirk help §bI am sure you know what this command can do.\n§a/quirk add <quirk> §bAdd a quirk\n§a/quirk remove <quirk> §bRemove a quirk\n§a/quirk list §bList all quirks",
+  "command.quirk.help": "§b/quirk help:\n§a/quirk help §bI am sure you know what this command can do.\n§a/quirk add <quirk> §bAdd a quirk\n§a/quirk remove <quirk> §bRemove a quirk\n§a/quirk list §bList all quirks\n§a/quirk gui §bOpen quirks GUI",
   "command.quirk.remove": "§aRemove quirk %d §a successful",
   "command.quirk.add": "§aAdd quirk %d §a successful",
   "command.quirk.not_quirk": "§cThis quirk hasn't existed",
@@ -60,6 +61,7 @@
   "advancements.toneko.got_neko_potion.description": "§dGet neko potion",
   "advancements.toneko.neko_armor.title": "§aMeow, neko tails wag",
   "advancements.toneko.neko_armor.description": "§dWear neko gear",
+  "screen.toneko.quirk": "Quirk Settings",
   "misc.toneko.owner": "owner",
   "misc.toneko.nya": "meow~",
   "misc.toneko.prefix": "§aneko"
