--- a/common/src/main/resources/assets/toneko/lang/zh_tw.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_tw.json
@@ -16,6 +16,7 @@
   "key.toneko.lie.category": "喵喵",
   "key.toneko.get_down": "趴下",
   "key.toneko.ride": "尝试乘骑",
+  "key.toneko.quirk": "打开性癖界面",
   "command.toneko.not_player": "§c指令執行者只能是玩家喔",
   "command.toneko.not_found": "§c沒找到這個玩家喔",
   "command.toneko.player.success": "§a你現在成為了 §6%d §a的主人喵～",
@@ -40,7 +41,7 @@
   "command.neko.nickname.success": "§a現在你的暱稱是 %d §a啦",
   "command.neko.level.success": "§a你的貓貓等級是 %d §a啦",
   "command.neko.lore.no_item": "§c你手上什麼都沒有耶",
-  "command.quirk.help": "§b/quirk 幫助：\n§a/quirk help §b我相信你肯定知道這個指令是做什麼的喵\n§a/quirk add <性癖> §b新增性癖\n§a/quirk remove <性癖> §b刪除性癖\n§a/quirk list §b列出所有性癖",
+  "command.quirk.help": "§b/quirk 幫助：\n§a/quirk help §b我相信你肯定知道這個指令是做什麼的喵\n§a/quirk add <性癖> §b新增性癖\n§a/quirk remove <性癖> §b刪除性癖\n§a/quirk list §b列出所有性癖\n§a/quirk gui §b打开性癖页面",
   "command.quirk.remove": "§a成功刪除了 %d §a性癖了喵",
   "command.quirk.add": "§a成功新增了 %d §a性癖了喵",
   "command.quirk.not_quirk": "§c這個性癖不存在喵～",
@@ -60,6 +61,7 @@
   "advancements.toneko.got_neko_potion.description": "§d取得貓娘藥水",
   "advancements.toneko.neko_armor.title": "§a喵喵叫，貓尾巴搖",
   "advancements.toneko.neko_armor.description": "§d穿上貓貓的裝備",
+  "screen.toneko.quirk": "性癖设置",
   "misc.toneko.owner": "主人",
   "misc.toneko.nya": "喵～",
   "misc.toneko.prefix": "§a貓娘"
