--- a/common/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -16,6 +16,7 @@
   "key.toneko.lie.category": "喵喵",
   "key.toneko.get_down": "趴下",
   "key.toneko.ride": "尝试乘骑",
+  "key.toneko.quirk": "打开性癖界面",
   "command.toneko.not_player": "§c命令执行者只能是玩家哦",
   "command.toneko.not_found": "§c没找到这个玩家哦",
   "command.toneko.player.success": "§a你现在成为了 §6%d §a的主人喵~",
@@ -40,7 +41,7 @@
   "command.neko.nickname.success": "§a现在你的昵称是 %d §a啦",
   "command.neko.level.success": "§a你的猫猫等级是 %d §a啦",
   "command.neko.lore.no_item": "§c你手上什么都没有诶",
-  "command.quirk.help": "§b/quirk 帮助:\n§a/quirk help §b我相信你肯定知道这个命令是做什么的喵\n§a/quirk add <性癖> §b添加性癖\n§a/quirk remove <性癖> §b删除性癖\n§a/quirk list §b列出所有性癖",
+  "command.quirk.help": "§b/quirk 帮助:\n§a/quirk help §b我相信你肯定知道这个命令是做什么的喵\n§a/quirk add <性癖> §b添加性癖\n§a/quirk remove <性癖> §b删除性癖\n§a/quirk list §b列出所有性癖\n§a/quirk gui §b打开性癖界面",
   "command.quirk.remove": "§a成功删除了 %d §a性癖了喵",
   "command.quirk.add": "§a成功添加了 %d §a性癖了喵",
   "command.quirk.not_quirk": "§c这个性癖不存在喵~",
@@ -60,6 +61,7 @@
   "advancements.toneko.got_neko_potion.description": "§d获取猫娘药水",
   "advancements.toneko.neko_armor.title": "§a喵喵叫，猫尾巴摇",
   "advancements.toneko.neko_armor.description": "§d穿上猫猫的装备",
+  "screen.toneko.quirk": "性癖设置",
   "misc.toneko.owner": "主人",
   "misc.toneko.nya": "喵~",
   "misc.toneko.prefix": "§a猫娘"
