--- a/common/src/main/resources/assets/toneko/lang/en_us.json
+++ b/common/src/main/resources/assets/toneko/lang/en_us.json
@@ -10,6 +10,7 @@
   "attribute.name.neko.degree": "neko degree",
   "enchantment.toneko.reversion": "Reversion",
   "quirk.toneko.caress": "caress",
+  "quirk.toneko.caress.des": "You like to be touched",
   "quirk.toneko.caress.use": "§dYou gently stroked %d.",
   "quirk.toneko.caress.be_used": "§dYou were gently petted by %d",
   "key.toneko.lie" : "lie",
