--- a/common/src/main/resources/assets/toneko/lang/zh_tw.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_tw.json
@@ -10,6 +10,7 @@
   "attribute.name.neko.degree": "猫猫等级",
   "enchantment.toneko.reversion": "反轉",
   "quirk.toneko.caress": "撫摸",
+  "quirk.toneko.caress.des": "你喜欢被摸摸",
   "quirk.toneko.caress.use": "§d你輕輕撫摸了 %d §d喵～",
   "quirk.toneko.caress.be_used": "§d你被 %d §d輕輕地撫摸了一下喵～",
   "key.toneko.lie" : "躺下",
