修改XP实现逻辑

--- a/common/src/main/resources/assets/toneko/lang/en_us.json
+++ b/common/src/main/resources/assets/toneko/lang/en_us.json
@@ -13,6 +13,8 @@
   "quirk.toneko.caress.des": "You like to be touched",
   "quirk.toneko.caress.use": "§dYou gently stroked %d.",
   "quirk.toneko.caress.be_used": "§dYou were gently petted by %d",
+  "quirk.toneko.crystal_neko": "Crystal_Neko",
+  "quirk.toneko.crystal_neko.des": "Eh? Do you have any idea about Crystal_Neko?",
   "key.toneko.lie" : "lie",
   "key.toneko.lie.category": "neko",
   "key.toneko.get_down": "get down",
