--- a/common/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -13,6 +13,8 @@
   "quirk.toneko.caress.des": "你喜欢被摸摸",
   "quirk.toneko.caress.use": "§d你轻轻抚摸了 %d §d喵~",
   "quirk.toneko.caress.be_used": "§d你被 %d §d轻轻地抚摸了一下喵~",
+  "quirk.toneko.crystal_neko": "Crystal_Neko",
+  "quirk.toneko.crystal_neko.des": "欸？你对猫猫有想法喵？",
   "key.toneko.lie" : "躺下",
   "key.toneko.lie.category": "喵喵",
   "key.toneko.get_down": "趴下",
