--- a/common/src/main/resources/assets/toneko/lang/en_us.json
+++ b/common/src/main/resources/assets/toneko/lang/en_us.json
@@ -15,6 +15,28 @@
   "quirk.toneko.caress.be_used": "§dYou were gently petted by %d",
   "quirk.toneko.crystal_neko": "Crystal_Neko",
   "quirk.toneko.crystal_neko.des": "Eh? Do you have any idea about Crystal_Neko?",
+  "quirk.toneko.crystal_neko.damage.critical": "§aHey, owner, your HP is low meow~ You need to replenish it as soon as possible~",
+  "quirk.toneko.crystal_neko.damage.low": "§aAre you okay, owner meow?",
+  "quirk.toneko.crystal_neko.damage.medium": "§aowner, do you feel pain meow~",
+  "quirk.toneko.crystal_neko.damage.high": "§aWow wow wow, owner, it hurts, be careful meow~",
+  "quirk.toneko.crystal_neko.join": "§aJiang Jiang~ Welcome to join meow~",
+  "quirk.toneko.crystal_neko.attack.high": "§aFight, owner, I believe you can win meow~",
+  "quirk.toneko.crystal_neko.attack.medium": "§aCome on, you've fought hard meow~",
+  "quirk.toneko.crystal_neko.attack.low": "§aGreat, victory is not far away meow~",
+  "quirk.toneko.crystal_neko.attack.critical": "§aTry harder, victory is just around the corner~",
+  "quirk.toneko.crystal_neko.attack.dead": "§aGreat, I won successfully meow~",
+  "quirk.toneko.zako": "Zako",
+  "quirk.toneko.zako.des": "♡Zako Zako～♡",
+  "quirk.toneko.zako.damage.critical": "§cHey, how come you can't even protect yourself, you're too weak～",
+  "quirk.toneko.zako.damage.low": "§cYou must be hurt, zako～",
+  "quirk.toneko.zako.damage.medium": "§cYou're hurt, zako～",
+  "quirk.toneko.zako.damage.high": "§cHey, you accidentally let yourself get hurt so much, you're really a zako～",
+  "quirk.toneko.zako.join": "§cIsn't this a zako～Why are you here",
+  "quirk.toneko.zako.attack.high": "§cCan you beat me, zako～",
+  "quirk.toneko.zako.attack.medium": "§cIt took you so long to knock down this amount of HP, how come you are so weak~",
+  "quirk.toneko.zako.attack.low": "§cYou look pretty good, you little fry~",
+  "quirk.toneko.zako.attack.critical": "§cHey, you are actually going to succeed?",
+  "quirk.toneko.zako.attack.dead": "§aGood, good, you are awesome~",
   "key.toneko.lie" : "lie",
   "key.toneko.lie.category": "neko",
   "key.toneko.get_down": "get down",
