--- a/common/src/main/resources/assets/toneko/lang/zh_tw.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_tw.json
@@ -15,6 +15,28 @@
   "quirk.toneko.caress.be_used": "§d你被 %d §d輕輕地撫摸了一下喵～",
   "quirk.toneko.crystal_neko": "Crystal_Neko",
   "quirk.toneko.crystal_neko.des": "欸？你对猫猫有想法？",
+  "quirk.toneko.crystal_neko.damage.critical": "§a诶呀，主人，你的血量很低了喵～要尽快补充哦～",
+  "quirk.toneko.crystal_neko.damage.low": "§a没大碍吧，主人喵？",
+  "quirk.toneko.crystal_neko.damage.medium": "§a主人觉得疼吗喵～",
+  "quirk.toneko.crystal_neko.damage.high": "§a哇哇哇，主人很疼吧，要小心点喵～",
+  "quirk.toneko.crystal_neko.join": "§a酱酱～欢迎加入喵～",
+  "quirk.toneko.crystal_neko.attack.high": "§a战斗吧，主人，我相信你可以胜利的喵～",
+  "quirk.toneko.crystal_neko.attack.medium": "§a加油哦，你已经很努力地战斗了喵～",
+  "quirk.toneko.crystal_neko.attack.low": "§a好耶，距离胜利不远了喵～",
+  "quirk.toneko.crystal_neko.attack.critical": "§a再加把劲，胜利就在前方～",
+  "quirk.toneko.crystal_neko.attack.dead": "§a好耶，成功战胜了喵～",
+  "quirk.toneko.zako": "杂鱼",
+  "quirk.toneko.zako.des": "♡杂鱼杂鱼～♡",
+  "quirk.toneko.zako.damage.critical": "§c诶呀，你怎么连自己都保护不好呀，也太菜了吧～",
+  "quirk.toneko.zako.damage.low": "§c受伤了吧，小杂鱼～",
+  "quirk.toneko.zako.damage.medium": "§c疼了吧，小杂鱼～",
+  "quirk.toneko.zako.damage.high": "§c诶呀，一不小心让自己受到这么大的伤害，可真是个杂鱼呢～",
+  "quirk.toneko.zako.join": "§c这不是小杂鱼吗～你怎么来了呀",
+  "quirk.toneko.zako.attack.high": "§c你打得过吗，杂鱼～",
+  "quirk.toneko.zako.attack.medium": "§c半天才打掉这点血量，你怎么这么菜呀～",
+  "quirk.toneko.zako.attack.low": "§c看起来你还挺厉害的嘛，小杂鱼～",
+  "quirk.toneko.zako.attack.critical": "§c诶呀，你居然要成功了？",
+  "quirk.toneko.zako.attack.dead": "§a好叭好叭，算你厉害～",
   "key.toneko.lie" : "躺下",
   "key.toneko.lie.category": "喵喵",
   "key.toneko.get_down": "趴下",
